Update styles and fix dark mode bug

--- a/src/Components/card.css
+++ b/src/Components/card.css
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  color: white;
   /* ======= */
 }
 
@@ -42,7 +43,6 @@
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
